# Zoka-embedded

./: .gitignore  .gitmodules  README.md  platformio.ini
Zoka_BringUp/include/: pins.hpp
Zoka_BringUp/src/: main.cpp
Zoka_GUI/: Themes.slt  Zoka_GUI.sll  Zoka_GUI.spj
Zoka_GUI/assets/: ui_font_Lexend24.fcfg  ui_font_Lexend32.fcfg  ui_font_Lexend50.fcfg
Zoka_GUI/components/: StatusBar.ecomp
rgb_panel/: CMakeLists.txt  README.md  dodo.py  esp_lcd_panel_rgb.h  partitions.csv  sdkconfig  sdkconfig.old
rgb_panel/components/MCP23017/: CMakeLists.txt
rgb_panel/main/: CMakeLists.txt  lcd_parameters.h  lvgl_demo_ui.c  main.cpp  pins.hpp  rgb_lcd_example_main.c  rgb_lcd_example_main.c.txt  rgb_lcd_example_main.cpp
rgb_panel/main/ui/: CMakeLists.txt  README.md  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_theme_manager.c  ui_themes.c  ui_themes.h
rgb_panel/main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_statusbar.c  ui_comp_statusbar.h
rgb_panel/main/ui/fonts/: ui_font_Lexend24.c  ui_font_Lexend32.c  ui_font_Lexend50.c
rgb_panel/main/ui/images/: ui_img_1513849953.c  ui_img_285769805.c  ui_img_58046877.c  ui_img_865313178.c  ui_img_course_png.c  ui_img_cycle_png.c  ui_img_iphone_png.c  ui_img_iphonex_png.c  ui_img_m_png.c  ui_img_navigation_png.c  ui_img_user_png.c  ui_img_zoka_front_small_png.c
rgb_panel/main/ui/screens/: ui_BootScreen.c  ui_ConnectScreen.c  ui_MainScreen.c  ui_MainScreen1.c  ui_Screen1.c  ui_SelectionMenu.c
src/: BLE_Hud_Service.cpp  BLE_Hud_Service.hpp  main.cpp
(+44 files in other folders)
